# media-platform

./: .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CURRENT_SYSTEM.md  Makefile  README.md  SETUP.md  TODO.md  check_notion_parent.py  instagram-auto-post-spec.md  link_databases.py  pyproject.toml  update_classroom_by_schedule.py  update_locations_standalone.py
.github/archived_workflows/: test-schedule.yml
.github/workflows/: admin-web-deploy.yml  ai-review-gate.yml  deploy-failure-triage.yml  gallery-export.yml  image-link-health.yml  monthly-schedule.yml  pr-lifecycle.yml  schedule.yml  worker-deploy.yml
apps/admin-web/: .gitignore  README.md  admin-upload-ui-spec.md  admin.html  package.json
apps/gallery/: ARCHITECTURE.md  README.md
apps/gallery-web/: .gitignore  README.md  gallery-ui-spec.md  gallery.html  gallery.sample.json  package.json
apps/worker-api/: README.md  (+1 more)
docs/: README.md  architecture.md  monorepo-integration.md  operations.md  setup.md  system-spec.md
scripts/: backfill_images.py  check-repo-structure.sh  check_branch_protection.sh  check_changed_python.py  check_image_links.py  cleanup_duplicates.py  execute_recommended_checks.py  fetch_pr_comments.py  gh_pr_lifecycle.sh  gh_pr_merge_and_cleanup_local.sh  gh_pr_ready.sh  link_orphaned_images.py  r2_backup.sh  recommend_checks.py  test_threads_simple.py
tests/: test_cli_monthly_schedule.py  test_gallery_exporter.py  test_grouping.py  test_monthly_schedule.py  test_notion_db_ready_filter.py  test_notion_db_tags.py  test_poster.py  test_x_twitter.py
(+53 files in other folders)
